8237491: [Linux] Undecorated stage cannot be maximized

Reviewed-by: kcr